<resources>
    <string name="app_name">TouchPgm</string>
    <string name="Consigne_main">Goal : Hit as many times the screen</string>
    <string name="Button_go_text">Let\'s Go !!!</string>
    <string name="title_activity_main3"></string>
    <string name="title_activity_main4"></string>
    <string name="score_text">Your Score:</string>
    <string name="Consigne_seconde">(Choose a number between %1$d and %2$d)</string>
    <string name="choosedtime">Game Duration :</string>
    <string name="unittime">Seconds</string>
    <string name="again">Try Again</string>
    <string name="menu">Main menu</string>
    <string name="Bouton_jeu">Touch Me !!!</string>
    <string name="scoreBySecond_text">Your score Touch Per Second (Tps)</string>
    <string name="title_activity_waiting"></string>
    <string name="getready">Get Ready !</string>
    <string name="title_activity_calm_down"></string>
    <string name="tableau_nom">Name</string>
    <string name="tableau_tps">TPS</string>
    <string name="tableau_temps">Time Played</string>
    <string name="tableau_classement">Rank</string>
    <string name="votre_score">Your Score</string>
    <string name="save">Save</string>
    <string name="your_name">Your Name :</string>

</resources>

