<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="fr.telecom_st_etienne.ihm.touchpgm.activity.ScoreResult"
    tools:showIn="@layout/activity_scoreresult">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/score_text"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/score_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="2555"
            android:textAlignment="center"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/scoreBySecondText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scoreBySecond_text"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/scoreBySecond_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="2555"
            android:textAlignment="center"
            android:textSize="60sp" />

    </LinearLayout>

    <TableLayout
        android:id="@+id/tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical|center_horizontal|fill_horizontal|center|fill|clip_horizontal"
        android:orientation="vertical"
        android:scrollIndicators="bottom|right"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:scrollbars="horizontal|vertical"
        android:stretchColumns="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TableRow
            android:id="@+id/tab_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/classement_texte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tableau_classement"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nom_texte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tableau_nom"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tps_texte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tableau_tps"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/temps_texte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tableau_temps"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tab_rang_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tab_nom_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tab_tps_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tab_temps_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tab_rang_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tab_nom_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tab_tps_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tab_temps_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tab_rang_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tab_nom_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tab_tps_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tab_temps_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/again"
            tools:layout_editor_absoluteY="218dp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu"
            tools:layout_editor_absoluteX="122dp"
            tools:layout_editor_absoluteY="162dp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
